# libpel

./: .gitignore  CMakeLists.txt  README.md  TODO.md  index.html  install.sh  pel.pc
.github/workflows/: cmake.yml
include/: pel.h
include/pel/: error.h  pel.h
lib/png-easy/: CMakeLists.txt  README.md  png-easy.c  png-easy.h  png-io.c  png-io.h
lib/png-easy/tests/: CMakeLists.txt  creating.c
src/: circle.c  error.c  filters.c  handle.c  handle.h  image.c  image.h  pel.c  pixel.c  pixel.h  png-easy.c  png-easy.h  state.h
src/helper/: ft-easy.c  ft-easy.h  jpeg-easy.c  jpeg-easy.h  png-easy.c  png-easy.h  tt-easy.c  tt-easy.h  webp-easy.c  webp-easy.h
src/shapes/: circle.c  line.c  line.h  rectangle.c  text.c  triangle.c
tests/: CMakeLists.txt  circle.c  conversion.c  errors.c  filters.c  fonts.c  img_conf.c  line.c  rectangle.c  tests.cmake  text.c  triangle.c
www/: index.html
